2006-02-11  Renato Caldas  <seventhguardian@gmail.com>

	* FvwmIdent/FvwmIdent.c:
	* FvwmForm/FvwmForm.c:
	* FvwmGtk/FvwmGtk.c:
	Replaced global vars for name and name length for a ModuleArgs
	struct pointed by "module".
	main() changed to copy the global fd's for comunication with fvwm
	from the struct.
	main() changed to use ParseModuleArgs instead of the "manual"
	parsing methods.
	main() changed to use the struct's user_argc and user_argv for
	parsing command line options.
	Small misc changes to use module->name for error messages.

	* FvwmIdent/FvwmIdent.c:
	Replaced the app window global var (app_win) for module->window.

	* FvwmForm/FvwmForm.c (ParseConfigLine):
	(ReadConfig):
	(ParseActiveMessage):
	* FvwmGtk/FvwmGtk.c (parse_config_line):
	(parse_options):
	Changed functions to use CatString3 and module->name.

2006-02-10  George Potapov <nephrite@inbox.ru>

	* modules/FvwmButtons/FvwmButtons.1.in
	* FvwmButtons/FvwmButtons.c (Loop):
	(ButtonPressProcess):
	* modules/FvwmButtons/FvwmButtons.h
	* FvwmButtons/dynamic.c (parse_message_line):
	Added command PressButton to module FvwmButtons

2006-02-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmSave/FvwmSave.1.in:
	removed documentation referring to NoClutter from FvwmSave man page

2006-02-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmButtons/FvwmButtons.c:
	* FvwmButtons/FvwmButtons.h:
	* FvwmButtons/button.h:
	* FvwmButtons/draw.h:
	* FvwmButtons/icons.c:
	* FvwmButtons/icons.h:
	* FvwmButtons/misc.c:
	* FvwmButtons/misc.h:
	* FvwmButtons/output.c:
	* FvwmButtons/parse.c:
	reformat FvwmButtons code to be more readable and consistent

2006-02-10  Renato Caldas  <seventhguardian@gmail.com>

	* FvwmTheme/FvwmTheme.c:
	* FvwmScript/FvwmScript.c:
	* FvwmScript/Instructions.c:
	* FvwmSave/FvwmSave.c:
	* FvwmSaveDesk/FvwmSaveDesk.c:
	* FvwmRearrange/FvwmRearrange.c:
	* FvwmScroll/FvwmScroll.c:
	* FvwmScroll/FvwmScroll.h:
	* FvwmScroll/GrabWindow.c:
	* FvwmTaskBar/FvwmTaskBar.c: