@@ -1,3 +1,8 @@
+2006-02-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* FvwmDragWell/xdndDragSource.c (xdndSrcDoDrag):
+	Use return code of FQueryPointer()
+
 2006-02-11  Renato Caldas  <seventhguardian@gmail.com>
 
 	* FvwmIdent/FvwmIdent.c:
